--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     implementation 'org.javacord:javacord:3.0.3'
+    testCompile 'org.codehaus.groovy:groovy-test:2.4.3'
+    testCompile 'junit:junit:4.12'
 }
 
 jar {
